# django-loadcsv

./: .gitignore  LICENSE  README.md  pyproject.toml
loadcsv/: apps.py
loadcsv/management/commands/: loadcsv.py
src/loadcsv/: models.py
tests/: models.py  tests.py
tests/fixtures/: test1.csv  test2.csv
tests/migrations/: 0001_initial.py  0002_simpletable2_rename_simpletable_simpletable1_and_more.py
